[package]
authors = ["Nathan Ringo <remexre@gmail.com>"]
description = "A custom derive for implementing Display more easily."
documentation = "https://docs.rs/display_attr"
homepage = "https://github.com/remexre/display_attr"
license = "Apache-2.0/MIT"
name = "display_attr"
readme = "README.md"
repository = "https://github.com/remexre/display_attr"
version = "0.1.2-alpha.0"

[dependencies]
quote = "0.6.3"
syn = { version = "0.14.2", features = ["extra-traits", "full"] }
proc-macro2 = "0.4.5"

[lib]
proc-macro = true
